--- a/package.json
+++ b/package.json
@@ -1,14 +1,27 @@
 {
   "name": "catalogo",
   "version": "1.0.0",
+  "description": "Sistema de catálogo modernizado com upload de imagens",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "build": "echo 'Build concluído'"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^7.0.3"
+    "mongoose": "^7.0.3",
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.32.0",
+    "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.0"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
   }
 }
